Some clean up to login views and page titles

--- a/TwitterManager/TwitterManager/Views/Shared/_Layout.cshtml
+++ b/TwitterManager/TwitterManager/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Twitter API</title>
+    <title>@ViewBag.Title - Bits Corner - Twitter Manager</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -36,7 +36,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Twitter API</p>
+            <p>&copy; @DateTime.Now.Year - Bits Corner, Twitter Manager</p>
         </footer>
     </div>
 
